# TPCHQuery

./: .gitignore  README.md  compile.sh  gt_testcase_1.txt  gt_testcase_2.txt  gt_testcase_3.txt  link_files.sh  parse_scores.py  run.sh  zip_submission.py
q3-src/: CMakeLists.txt  Makefile  README.md  config.h  file_input_helper.cpp  file_input_helper.h  file_input_indexing.cpp  file_input_indexing.cu  file_input_indexing.h  file_loader.h  file_loader_gpu.h  file_parser.h  index_query_helper.cpp  index_query_helper.cu  index_query_helper.h  lock_free_table.h  parsing_util.cpp  parsing_util.h  query_offloading_gpu.cu  tpch_q3_main.cpp  tpch_q3_main_submit.cpp  tpch_q3_main_submit.cu
q3-src/cuda/: CUDAStat.cuh  cuda_base.cuh  primitives.cuh
q3-src/cuda/cub/: CHANGE_LOG.TXT
q3-src/cuda/cub/test/: test_device_histogram.cu
q3-src/cuda/cuda_fake/: fake.h
q3-src/test/: test_parsing.cpp
q3-src/util/: aio.h  archive.h  log.h  util.h
q3-src/util/primitives/: blocking_queue.h  primitives.h
